Mon Apr 12 15:35:21 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BiDir_GIOP/BiDirPolicyC.h:
          Removed wrongly added path

Mon Apr 12 10:11:50 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/tao_idl.mpc:

          Reverted the change I made in

          Fri Apr  9 12:28:48 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

          since it was not necessary with recent changes to the MPC
          framework.

Mon Apr 12 14:01:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BiDir_GIOP/BiDirPolicyC.{h,cpp,i}:
          Regenerated these files with the latest version of the TAO_IDL
          compiler. More generated files will be updated shortly.

Mon Apr 12 13:56:32 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/tao.mpc:
          Added Template_Files to make sure that some extra files are also
          generated to the install section

        * tao/Object_Proxy_Impl.h:
        * tao/target_specification.h:
        * tao/Parser_Registry.h:
        * tao/ObjectKey_Table.h:
        * tao/objectid.h:
        * tao/Default_Collocation_Resolver.h:
        * tao/Invocation_Base.h:
          Fixed types and improved doxygen documentation

Mon Apr 12 08:02:54 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* TAO_IDL/be/be_visitor_field/field_ci.cpp:

	  Fixed warnings.

Sun Apr 11 18:33:35 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* */*.icc:

	  Axed them from the repo. Thanks tp Johnny for reminding me to do
	  this.

Sun Apr 11 18:20:40 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* TAO/examples/POA/DSI/DSI.DSW:

	  Removed this from the repo.

Sat Apr 10 23:39:54 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* */*.ds[p,w]:

	  Removed.

Sat Apr 10 17:54:54 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_decl.cpp:
        * TAO_IDL/be/be_visitor_sequence.cpp: