@@ -1,3 +1,13 @@
+Mon Apr 12 10:43:19 2004  Venkita Subramonian  <venkita@cs.wustl.edu>
+
+	* orbsvcs/orbsvcs/Sched/Reconfig_Sched_Utils.{h,cpp}: Added a new
+	  comparison function comp_tuple_finish_times which can compare
+	  RT_Info_Tuple structures. 
+	
+	* orbsvcs/orbsvcs/Sched/Reconfig_Scheduler_T.cpp: Used the above
+	  comparison function instead of comp_entry_finish_times which was
+	  causing a segfault.
+
 Mon Apr 12 15:35:21 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/BiDir_GIOP/BiDirPolicyC.h:
